Fixing project jump box input height in IE8

--- a/public/stylesheets/select2_customizing.css
+++ b/public/stylesheets/select2_customizing.css
@@ -70,3 +70,9 @@
   -o-text-overflow: ellipsis;
   text-overflow: ellipsis;
 }
+
+
+/* Fix search input in IE8 - input was to high */
+.select2-search input {
+  min-height: 0\9;
+}
